microservices/k8s/monitoring/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: monitoring 
  labels:
    app: node-exporter
spec:
  selector:
    app: node-exporter 
  ports:
    - name: metrics 
      port: 9100 
      targetPort: 9100
