microservices/k8s/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix 
        backend:
          service:
            name: grafana 
            port:
              number: 3000
