microservices/k8s/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific 
        backend:
          service:
            name: grafana 
            port:
              number: 3000
      - path: /prometheus(/|$)(.*) 
        pathType: ImplementationSpecific 
        backend:
          service:
            name: prometheus 
            port:
              number: 9090
